Misc code improvements